---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/polygon.sql
---
create table polygon_tbl (f1 polygon);

insert into polygon_tbl (f1) values ('(2.0,0.0),(2.0,4.0),(0.0,0.0)');

insert into polygon_tbl (f1) values ('(3.0,1.0),(3.0,3.0),(1.0,0.0)');

insert into polygon_tbl (f1) values ('(1,2),(3,4),(5,6),(7,8)');

insert into polygon_tbl (f1) values ('(7,8),(5,6),(3,4),(1,2)');

insert into polygon_tbl (f1) values ('(1,2),(7,8),(5,6),(3,-4)');

insert into polygon_tbl (f1) values ('(0.0,0.0)');

insert into polygon_tbl (f1) values ('(0.0,1.0),(0.0,1.0)');

insert into polygon_tbl (f1) values ('0.0');

insert into polygon_tbl (f1) values ('(0.0 0.0');

insert into polygon_tbl (f1) values ('(0,1,2)');

insert into polygon_tbl (f1) values ('(0,1,2,3');

insert into polygon_tbl (f1) values ('asdf');

select * from polygon_tbl;

create table quad_poly_tbl (
  id int,
  p polygon
);

insert into quad_poly_tbl
select
  (x - 1) * 100 + y,
  polygon(
    circle(point(x * 10, y * 10), 1 + (x + y) % 10)
  )
from
  generate_series(1, 100) as x,
  generate_series(1, 100) as y;

insert into quad_poly_tbl
select
  i,
  cast('((200, 300),(210, 310),(230, 290))'
  as polygon)
from
  generate_series(10001, 11000) as i;

insert into quad_poly_tbl values (11001, null), (11002, null), (11003, null);

create index "quad_poly_tbl_idx" on quad_poly_tbl using spgist (p);

set enable_seqscan = 'on';

set enable_indexscan = off;

set enable_bitmapscan = off;

create temporary table quad_poly_tbl_ord_seq2
as
  select
    RANK() over (order by p <-> cast('123,456' as point)) as n,
    p <-> cast('123,456' as point) as dist,
    id
  from
    quad_poly_tbl
  where
    p <@
    cast('((300,300),(400,600),(600,500),(700,200))'
    as polygon);

set enable_seqscan = off;

set enable_indexscan = off;

set enable_bitmapscan = 'on';

select
  COUNT(*)
from
  quad_poly_tbl
where
  p <<
  cast('((300,300),(400,600),(600,500),(700,200))'
  as polygon);

select
  COUNT(*)
from
  quad_poly_tbl
where
  p <<
  cast('((300,300),(400,600),(600,500),(700,200))'
  as polygon);

select
  COUNT(*)
from
  quad_poly_tbl
where
  p &<
  cast('((300,300),(400,600),(600,500),(700,200))'
  as polygon);

select
  COUNT(*)
from
  quad_poly_tbl
where
  p &<
  cast('((300,300),(400,600),(600,500),(700,200))'
  as polygon);

select
  COUNT(*)
from
  quad_poly_tbl
where
  p &&
  cast('((300,300),(400,600),(600,500),(700,200))'
  as polygon);

select
  COUNT(*)
from
  quad_poly_tbl
where
  p &&
  cast('((300,300),(400,600),(600,500),(700,200))'
  as polygon);

select
  COUNT(*)
from
  quad_poly_tbl
where
  p &>
  cast('((300,300),(400,600),(600,500),(700,200))'
  as polygon);

select
  COUNT(*)
from
  quad_poly_tbl
where
  p &>
  cast('((300,300),(400,600),(600,500),(700,200))'
  as polygon);

select
  COUNT(*)
from
  quad_poly_tbl
where
  p >>
  cast('((300,300),(400,600),(600,500),(700,200))'
  as polygon);

select
  COUNT(*)
from
  quad_poly_tbl
where
  p >>
  cast('((300,300),(400,600),(600,500),(700,200))'
  as polygon);

select
  COUNT(*)
from
  quad_poly_tbl
where
  p <<|
  cast('((300,300),(400,600),(600,500),(700,200))'
  as polygon);

select
  COUNT(*)
from
  quad_poly_tbl
where
  p <<|
  cast('((300,300),(400,600),(600,500),(700,200))'
  as polygon);

select
  COUNT(*)
from
  quad_poly_tbl
where
  p &<|
  cast('((300,300),(400,600),(600,500),(700,200))'
  as polygon);

select
  COUNT(*)
from
  quad_poly_tbl
where
  p &<|
  cast('((300,300),(400,600),(600,500),(700,200))'
  as polygon);

select
  COUNT(*)
from
  quad_poly_tbl
where
  p |&>
  cast('((300,300),(400,600),(600,500),(700,200))'
  as polygon);

select
  COUNT(*)
from
  quad_poly_tbl
where
  p |&>
  cast('((300,300),(400,600),(600,500),(700,200))'
  as polygon);

select
  COUNT(*)
from
  quad_poly_tbl
where
  p |>>
  cast('((300,300),(400,600),(600,500),(700,200))'
  as polygon);

select
  COUNT(*)
from
  quad_poly_tbl
where
  p |>>
  cast('((300,300),(400,600),(600,500),(700,200))'
  as polygon);

select
  COUNT(*)
from
  quad_poly_tbl
where
  p <@
  cast('((300,300),(400,600),(600,500),(700,200))'
  as polygon);

select
  COUNT(*)
from
  quad_poly_tbl
where
  p <@
  cast('((300,300),(400,600),(600,500),(700,200))'
  as polygon);

select COUNT(*) from quad_poly_tbl where p @> cast('((340,550),(343,552),(341,553))' as polygon);

select COUNT(*) from quad_poly_tbl where p @> cast('((340,550),(343,552),(341,553))' as polygon);

select COUNT(*) from quad_poly_tbl where p ~= cast('((200, 300),(210, 310),(230, 290))' as polygon);

select COUNT(*) from quad_poly_tbl where p ~= cast('((200, 300),(210, 310),(230, 290))' as polygon);

set enable_indexscan = 'on';

set enable_bitmapscan = off;

select
  RANK() over (order by p <-> cast('123,456' as point)) as n,
  p <-> cast('123,456' as point) as dist,
  id
from
  quad_poly_tbl
where
  p <@
  cast('((300,300),(400,600),(600,500),(700,200))'
  as polygon);

create temporary table quad_poly_tbl_ord_idx2
as
  select
    RANK() over (order by p <-> cast('123,456' as point)) as n,
    p <-> cast('123,456' as point) as dist,
    id
  from
    quad_poly_tbl
  where
    p <@
    cast('((300,300),(400,600),(600,500),(700,200))'
    as polygon);

select
  *
from
  quad_poly_tbl_ord_seq2 as seq
  full outer join
    quad_poly_tbl_ord_idx2 as idx
  on seq.n = idx.n and
    seq.id = idx.id and
    (
      seq.dist = idx.dist or
      (seq.dist is null and idx.dist is null)
    )
where
  seq.id is null or idx.id is null;

reset enable_seqscan;

reset enable_indexscan;

reset enable_bitmapscan;

select pg_input_is_valid('(2.0,0.8,0.1)', 'polygon');

select * from pg_input_error_info('(2.0,0.8,0.1)', 'polygon');

select pg_input_is_valid('(2.0,xyz)', 'polygon');

select * from pg_input_error_info('(2.0,xyz)', 'polygon');
